--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <title>BEM</title>
     <link
       rel="stylesheet"
@@ -17,67 +17,56 @@
     />
   </head>
   <body>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="navbar-brand">MA 1</div>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="wrapper">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="navbar-brand">MA 1</div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <h1>Page Heading</h1>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <h1>Page Heading</h1>
 
-      <div class="grid">
-        <div class="grid__item">
-          <div class="product"></div>
-        </div>
-        <div class="grid__item">
-          <div class="product product--special"></div>
-        </div>
-        <div class="grid__item">
-          <div class="product product--sold-out"></div>
-        </div>
-        <div class="grid__item">
-          <div class="product"></div>
-        </div>
-        <div class="grid__item">
-          <div class="product"></div>
-        </div>
-        <div class="grid__item">
-          <div class="product"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm home-block"></div>
+            <div class="col-sm home-block"></div>
+            <div class="col-sm home-block"></div>
+            <div class="col-sm home-block"></div>
+          </div>
+          <div class="row">
+            <div class="col-sm home-block"></div>
+            <div class="col-sm home-block"></div>
+            <div class="col-sm home-block"></div>
+            <div class="col-sm home-block"></div>
+          </div>
         </div>
       </div>
     </div>
-
     <footer class="footer">
-      <div class="footer__item"></div>
+      <div class="footer__item">hello@email.com</div>
       <div class="footer__item">Copyright 2020</div>
-      <div class="footer__item">
-        <div class="legal-links">
-          <a href="/" class="legal-links__link">Terms</a> |
-          <a href="/" class="legal-links__link">Privacy Policy</a>
-        </div>
-      </div>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
